# grep-over-rag

./: .gitignore  .gitmodules  CLAUDE.md  README.md  conftest.py  pyproject.toml
data/: tasks.jsonl
docs/superpowers/plans/: 2026-05-30-grep-vs-rag-eval.md  2026-05-31-failure-mode-experiment.md  2026-06-04-rag-pipeline.md
docs/superpowers/specs/: 2026-05-31-failure-mode-experiment-design.md  2026-06-04-rag-pipeline-design.md
scripts/: build_index.py  extract_cases.py  run_experiment.sh
src/eval/: __init__.py  chunker.py  classifier.py  embedder.py  grep_agent.py  grep_tools.py  indexer.py  llm_client.py  rag_agent.py  rag_tools.py  runner.py  scorer.py  stats.py
tests/: test_chunker.py  test_classifier.py  test_embedder.py  test_grep_agent.py  test_grep_tools.py  test_indexer.py  test_llm_client.py  test_rag_agent.py  test_rag_tools.py  test_runner.py  test_scorer.py  test_stats.py
