[project]
name = "grep-over-rag"
version = "0.1.0"
description = "Agent Eval: Grep vs RAG for Java symbol lookup"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eval"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
